// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`deviceEvents deviceEvents in non-pnp context matches snapshot 1`] = `
<div
  className="device-events"
  key="device-events"
>
  <Component
    dispatch={[MockFunction]}
    fetchData={[Function]}
    monitoringData={false}
    setMonitoringData={[Function]}
    setShowPnpModeledEvents={[Function]}
    setShowSimulationPanel={[Function]}
    setShowSystemProperties={[Function]}
    showPnpModeledEvents={false}
    showSimulationPanel={false}
    showSystemProperties={false}
    startDisabled={false}
    synchronizationStatus={1}
  />
  <Component
    headerText="deviceEvents.headerText"
    tooltip="deviceEvents.tooltip"
  />
  <div
    className="horizontal-item"
  >
    <Component
      consumerGroup="$Default"
      monitoringData={false}
      setConsumerGroup={[Function]}
    />
  </div>
  <Component
    monitoringData={false}
    setHasError={[Function]}
    setSpecifyStartTime={[Function]}
    setStartTime={[Function]}
    specifyStartTime={false}
  />
  <div
    className="horizontal-item"
  >
    <Component
      monitoringData={false}
      setCustomEventHubConnectionString={[Function]}
      setCustomEventHubName={[Function]}
      setHasError={[Function]}
      setUseBuiltInEventHub={[Function]}
      useBuiltInEventHub={false}
    />
  </div>
  <Component
    onToggleSimulationPanel={[Function]}
    showSimulationPanel={false}
  />
  <div
    className="device-events-container"
  >
    <div
      className="scrollable-telemetry"
    >
      <article
        className="device-events-content"
        key="0"
      >
        <h5>
          9:44:58 PM, 10/14/2019
          :
        </h5>
        <pre>
          {
  "body": {
    "humid": 123
  },
  "enqueuedTime": "2019-10-14T21:44:58.397Z",
  "properties": {
    "iothub-message-schema": "humid"
  }
}
        </pre>
      </article>
    </div>
  </div>
</div>
`;

exports[`deviceEvents deviceEvents in pnp context matches snapshot while interface cannot be found 1`] = `
<div
  className="device-events"
  key="device-events"
>
  <Component
    dispatch={[Function]}
    fetchData={[Function]}
    monitoringData={false}
    setMonitoringData={[Function]}
    setShowPnpModeledEvents={[Function]}
    setShowSimulationPanel={[Function]}
    setShowSystemProperties={[Function]}
    showPnpModeledEvents={true}
    showSimulationPanel={false}
    showSystemProperties={false}
    startDisabled={false}
    synchronizationStatus={2}
  />
  <Component
    headerText="deviceEvents.headerText"
    tooltip="deviceEvents.tooltip"
  />
  <div
    className="horizontal-item"
  >
    <Component
      consumerGroup="$Default"
      monitoringData={false}
      setConsumerGroup={[Function]}
    />
  </div>
  <Component
    monitoringData={false}
    setHasError={[Function]}
    setSpecifyStartTime={[Function]}
    setStartTime={[Function]}
    specifyStartTime={false}
  />
  <div
    className="horizontal-item"
  >
    <Component
      monitoringData={false}
      setCustomEventHubConnectionString={[Function]}
      setCustomEventHubName={[Function]}
      setHasError={[Function]}
      setUseBuiltInEventHub={[Function]}
      useBuiltInEventHub={false}
    />
  </div>
  <Component
    onToggleSimulationPanel={[Function]}
    showSimulationPanel={false}
  />
  <div
    className="device-events-container"
  >
    <div
      className="scrollable-telemetry"
    />
  </div>
</div>
`;

exports[`deviceEvents deviceEvents in pnp context matches snapshot while interface definition is retrieved 1`] = `
<div
  className="device-events"
  key="device-events"
>
  <Component
    dispatch={[Function]}
    fetchData={[Function]}
    monitoringData={false}
    setMonitoringData={[Function]}
    setShowPnpModeledEvents={[Function]}
    setShowSimulationPanel={[Function]}
    setShowSystemProperties={[Function]}
    showPnpModeledEvents={true}
    showSimulationPanel={false}
    showSystemProperties={false}
    startDisabled={false}
    synchronizationStatus={2}
  />
  <Component
    headerText="deviceEvents.headerText"
    tooltip="deviceEvents.tooltip"
  />
  <div
    className="horizontal-item"
  >
    <Component
      consumerGroup="$Default"
      monitoringData={false}
      setConsumerGroup={[Function]}
    />
  </div>
  <Component
    monitoringData={false}
    setHasError={[Function]}
    setSpecifyStartTime={[Function]}
    setStartTime={[Function]}
    specifyStartTime={false}
  />
  <div
    className="horizontal-item"
  >
    <Component
      monitoringData={false}
      setCustomEventHubConnectionString={[Function]}
      setCustomEventHubName={[Function]}
      setHasError={[Function]}
      setUseBuiltInEventHub={[Function]}
      useBuiltInEventHub={false}
    />
  </div>
  <Component
    onToggleSimulationPanel={[Function]}
    showSimulationPanel={false}
  />
  <div
    className="device-events-container"
  >
    <div
      className="scrollable-telemetry"
    />
  </div>
</div>
`;
